# unfazed

./: .coverage  .coverage.7e602b148635.89.XHobchXx  .env  .gitignore  Dockerfile  LICENSE  Makefile  Plan.md  README.md  docker-compose.yml  mkdocs.yaml  openapi.yaml  pyproject.toml  roadmap.md  unchained.md
.VSCodeCounter/2024-10-13_18-14-16/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cursor/rules/: generate-features-doc.mdc  write-docs.mdc
.github/workflows/: publish.yml  test.yml
docs/: index.md
docs/en/: index.md  release-note.md
docs/en/features/: app.md  cache.md  command.md  concurrency.md  endpoint.md  error.md  exception.md  lifespan.md  logging.md  middleware.md  openapi.md  request.md  response.md  route.md  serializer.md  settings.md  testclient.md  tortoise-orm.md
docs/en/tutorial/: part1.md  part2.md  part3.md  part4.md  part5.md  part6.md
docs/source/: conf.py
docs/source/modules/: conf.rst  modules.rst  protocol.rst  type.rst
docs/zh/: index.md  release-note.md
docs/zh-CN/: index.md  release-note.md
docs/zh-CN/features/: app.md  cache.md  exception.md  lifespan.md  logging.md  middleware.md  serializer.md  settings.md  testclient.md
docs/zh-CN/tutorial/: part1.md  part2.md  part4.md  part5.md  part6.md
docs/zh-Hant/: index.md  release-note.md
docs/zh-Hant/features/: app.md  cache.md  command.md  endpoint.md  error.md  lifespan.md  logging.md  middleware.md  openapi.md  request.md  response.md  route.md  serializer.md  settings.md  staticfiles.md  testclient.md  tortoise-orm.md
docs/zh-Hant/instruction/: why-unfazed.md
docs/zh-Hant/tutorial/: part1.md  part2.md  part3.md  part4.md  part5.md  part6.md
docs/zh/endpoints/: endpoint.md  request.md
docs/zh/features/: cache.md  command.md  concurrency.md  endpoint.md  openapi.md  request.md  response.md  route.md  serializer.md  tortoise-orm.md
examples/myprj/: README.md  changelog.md  mkdocs.yml
playground/myapp/: manage.py
tests/: conftest.py  decorators.py  utils.py
tests/apps/: routes.py
tests/staticfiles/: index.html
tests/test_app/: test_app.py  test_app_base.py  test_app_registry.py
tests/test_application/: test_app_launch.py  test_command.py  test_installed_app.py  test_launch.py  test_route.py
tests/test_cache/: test_cache.py  test_cache_registry.py  test_cache_utils.py  test_locmem.py  test_redis.py  test_redis_serializer_client.py
tests/test_cli/: test_main.py
tests/test_command/: conftest.py  test_cmd.py  test_command_registry.py  test_runserver.py  test_start_cmd.py
tests/test_concurrency/: test_concurrency.py
tests/test_conf/: conftest.py  test_conf.py
tests/test_core/: test_unfazed.py
tests/test_db/: test_db_registry.py
tests/test_http/: test_request.py  test_response.py
tests/test_lifespan/: test_lifespan.py  test_lifespan_registry.py  test_ls_registry.py
tests/test_logging/: test_formatters.py  test_handlers.py  test_registry.py
tests/test_middleware/: test_m.py  test_middleware_common.py  test_middleware_others.py  test_middleware_register.py
tests/test_openapi/: _test_openapi_base.py  conftest.py  test_base.py  test_openapi_base.py  test_openapi_base2.py  test_openapi_cmd.py  test_openapi_services.py  test_routeinfo.py  test_service.py
tests/test_orm/: test_orm_cmd.py  test_serializer.py
tests/test_route/: conftest.py  test_endpoint.py  test_endpointhandler.py  test_route.py  test_route_base.py  test_route_endpoint.py  test_unfazed_integration.py
tests/test_serializer/: conftest.py  test_serializer_fields.py  test_serializer_methods.py  test_serializer_without_init.py
tests/test_server/: manage.py
tests/test_static/: test_staticfiles.py
tests/test_test/: test_requestfactory.py
tests/test_tt_orm/: test_orm_cmd.py  test_serializer.py  test_serializer_fields.py  test_serializer_methods.py
tests/test_unfazed/: _test_models.py  test_command.py  test_middleware.py  test_routes.py  test_settings.py
tests/test_utils/: test_module_loading.py  test_storage.py  test_utils_http.py
unfazed/: __main__.py  cli.py  const.py  types.py
unfazed/app/: __init__.py  base.py  registry.py
unfazed/cache/: __init__.py  decorators.py  handler.py  lifespan.py
unfazed/command/: __init__.py  base.py  registry.py
unfazed/concurrecy/: __init__.py
unfazed/conf/: __init__.py  base.py  decorators.py
unfazed/core/: __init__.py  application.py  applications.py
unfazed/db/: __init__.py  registry.py
unfazed/exception/: __init__.py  auth.py  base.py  code.py  http.py  orm.py  route.py
unfazed/file/: __init__.py
unfazed/http/: __init__.py  request.py  response.py
unfazed/lifespan/: __init__.py  base.py  registry.py
unfazed/logging/: __init__.py  formatters.py  handlers.py  registry.py
unfazed/middleware/: __init__.py  base.py  registry.py
unfazed/openapi/: __init__.py  base.py  endpoints.py  params.py  routes.py  service.py  spec.py  utils.py
unfazed/orm/: fields.py  models.py  queryset.py  registry.py  settings.py  utils.py
unfazed/protocol/: __init__.py  admin.py  app.py  asgi.py  auth.py  cache.py  command.py  conf.py  http.py  lifespan.py  middleware.py  orm.py  route.py  serializer.py
unfazed/route/: __init__.py  base.py  endpoint.py  params.py  registry.py  routing.py  utils.py
unfazed/schema/: __init__.py  admin.py  cache.py  command.py  logging.py  middleware.py  openapi.py  orm.py  serializer.py
unfazed/serializer/: __init__.py  base.py  utils.py
unfazed/static/: __init__.py  base.py
unfazed/template/project/{{ project_name }}/src/backend/: Makefile  asgi.py.tpl  conftest.py.tpl  manage.py  manage.py.tpl  pyproject.toml
unfazed/template/project/{{ project_name }}/src/backend/entry/: asgi.py  routes.py  routes.py.tpl
unfazed/template/project/{{ project_name }}/src/backend/entry/settings/: __init__.py.tpl
unfazed/test/: __init__.py  request.py
unfazed/type/: __init__.py  asgi.py  base.py  cache.py  common.py  conf.py  http.py  route.py
unfazed/utils/: __init__.py  http.py  locker.py  module_loading.py  pattern.py  storage.py  timer.py
(+341 files in other folders)
