[tool.poetry]
name = "unfazed"
version = "0.0.3"
description = "a django-like async python web framework"
authors = ["xin.zhou <zhouxin576@gmail.com>"]
license = "BSD 3-Clause \"New\" or \"Revised\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
starlette = "^0.37.2"
pydantic = "^2.6.3"
jinja2 = "^3.1.3"
click = "^8.1.7"
uvicorn = "^0.28.0"
orjson = "^3.10.3"
asgiref = "^3.8.1"
redis = "^5.0.8"
tortoise-orm = {version = "^0.21.6", extras = ["tortoise"]}
aerich = {version = "^0.7.2", extras = ["tortoise"]}
python-multipart = "^0.0.16"
httpx = "^0.27.2"
itsdangerous = "^2.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.3.1"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.14.0"
asyncmy = "^0.2.9"
pymysql = "^1.1.1"
pytest-asyncio = "^0.24.0"
anyio = "4.3.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
unfazed-cli = "unfazed.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = [
    "tests",
]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "if TYPE_CHECKING:"
]
