[project]
name = "unfazed"
version = "0.0.18"
description = "Production ready async python web framework"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name="xin.zhou", email="zhouxin576@gmail.com" },
]
license = { file="LICENSE" }
keywords = [
    "asgi",
    "web-framework",
    "async",
    "fastapi-alternative",
    "django-inspired",
    "tortoise-orm",
    "openapi",
    "swagger",
    "api-framework",
    "production-ready",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    "aerich>=0.8.1",
    "anyio>=4.7.0",
    "asgiref>=3.8.1",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.5",
    "openapi-pydantic>=0.5.1",
    "orjson>=3.10.13",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "starlette>=0.45.1",
    "tortoise-orm>=0.23.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["unfazed"]

[tool.hatch.build.targets.sdist]
include = [
    "unfazed",
]

[project.scripts]
unfazed-cli = "unfazed.cli:main"

[project.optional-dependencies]
shell = [
    "ipython>=9.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = [
    "tests",
]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "if TYPE_CHECKING:"
]
exclude_also = [
    "no cover: start(?s:.)*?no cover: stop",
]

[tool.ruff.lint]
ignore = [
    "B006",
    "B007",
    "B009",
    "B010",
    "B026",
    "B904",
    "B905",
    "C408",
    "C901",
    "E501",
    "E714",
]
select = ["B", "C", "E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.12"
pretty = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = false
warn_no_return = false
warn_unreachable = false
warn_unused_configs = true
allow_redefinition = true
strict_equality = true
show_error_context = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = "attr-defined"

[dependency-groups]
dev = [
    "asyncmy>=0.2.10",
    "ipython>=9.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocs-static-i18n>=1.2.3",
    "mypy>=1.14.1",
    "pymysql>=1.1.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "types-pymysql>=1.1.0.20241103",
    "types-pyyaml>=6.0.12.20250402",
]
